# madsqlite

./: .gitignore  .gitmodules  .travis.yml  MadSqlite.podspec  MadSqliteSwift.podspec  README.md  settings.gradle
android/: .gitignore  README.md  build.gradle
android/src/main/: AndroidManifest.xml
app/: CMakeLists.txt  README.md  build.gradle
app/src/androidTest/java/io/madrona/madsqlite/: DatabaseFTS5Test.java  DatabaseTest.java  ExampleInstrumentedTest.java
app/src/androidTest/java/io/madrona/testapplication/: DatabaseFTS5Test.java  DatabaseRTreeTest.java  DatabaseTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Constants.h  ContentValues.cpp  ContentValues.h  Cursor.cpp  Cursor.h  Database.cpp  Database.h  MadSqlite.cpp  Main.cpp  Util.cpp  mad-sqlite.cpp
app/src/main/java/io/madrona/madsqlite/: Cursor.java  Database.java  JniBridge.java  MainActivity.java
app/src/main/java/io/madrona/testapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/io/madrona/madsqlite/: ExampleUnitTest.java
docs/: index.html
ios/: MadContentValues.h  MadContentValuesFactory.mm  MadContentValuesImpl.h  MadContentValuesImpl.hh  MadContentValuesImpl.mm  MadDatabase.h  MadDatabase.hh  MadDatabase.mm  MadDatabaseImpl.hh  MadDatabaseImpl.mm  MadQuery.h  MadQueryImpl.h  MadQueryImpl.hh  MadQueryImpl.mm  MadSqlite-Swift.h  MadSqlite.podspec  MadSqliteFactory.hh  MadSqliteFactory.mm  Podfile  README.md  generate_docs.sh
ios/Example/: Podfile
ios/Example/MadSqlite/: MadViewController.m
ios/Example/MadSqlite.xcodeproj/: project.pbxproj
ios/Example/Tests/: MadSqliteFTS5Tests.m  MadSqliteRTreeTests.m  MadSqliteTests.m
ios/MadSqlite/: MadSqlite.h
ios/MadSqlite.xcodeproj/: project.pbxproj
ios/MadSqlite.xcodeproj/project.xcworkspace/xcuserdata/williamkamp.xcuserdatad/: UserInterfaceState.xcuserstate
ios/MadSqlite.xcodeproj/xcuserdata/williamkamp.xcuserdatad/xcschemes/: MadSqlite.xcscheme  xcschememanagement.plist
ios/MadSqlite/Classes/: MadContentValues.h  MadContentValuesImpl.hh  MadDatabaseImpl.mm  MadQuery.h  MadQueryImpl.hh
ios/MadSqliteTests/: MadSqliteFTS5Tests.swift  MadSqliteRTreeTest.swift  MadSqliteTests.swift
ios/docs/: Classes.html  Constants.html  Protocols.html  index.html
ios/docs/Protocols/: MadContentValues.html  MadQuery.html
ios/docs/docsets/: MadSqlite--output.tgz
ios/docs/docsets/MadSqlite--output.docset/Contents/: Info.plist
ios/docs/docsets/MadSqlite--output.docset/Contents/Resources/: docSet.dsidx
ios/docs/objc_output/: Classes.html  index.html
ios/docs/objc_output/Protocols/: MadContentValues.html
ios/docs/objc_output/docsets/: MadSqlite.tgz
ios/docs/objc_output/docsets/MadSqlite.docset/Contents/: Info.plist
ios_swift/: MADSqliteFactory.swift  Podfile  README.md
ios_swift/MadSqliteSwift/: MadDatabase.swift
ios_swift/MadSqliteSwift.xcodeproj/: project.pbxproj
ios_swift/MadSqliteSwift.xcodeproj/project.xcworkspace/xcuserdata/williamkamp.xcuserdatad/: UserInterfaceState.xcuserstate
ios_swift/MadSqliteSwift.xcodeproj/xcuserdata/williamkamp.xcuserdatad/xcschemes/: MadSqliteSwift.xcscheme  xcschememanagement.plist
ios_swift/MadSqliteSwift.xcworkspace/xcuserdata/williamkamp.xcuserdatad/: UserInterfaceState.xcuserstate
ios_swift/MadSqliteSwiftTests/: MadSqliteSwiftTests.swift
madsqlite/: CMakeLists.txt  README.md  build.gradle
madsqlite/src/androidTest/java/io/madrona/madsqlite/: DatabaseFTS5Test.java  DatabaseRTreeTest.java
madsqlite/src/main/cpp/: ContentValues.cpp  ContentValues.h  ContentValues.hpp  Cursor.cpp  Cursor.h  Cursor.hpp  Database.cpp  Database.h  Database.hpp  MadSqlite.cpp  Main.cpp
madsqlite/src/main/java/io/madrona/madsqlite/: Database.java
madsqlite/src/main/res/values/: strings.xml
(+17 files in other folders)
